--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link">Car List</a>
+        <a class="nav-link" routerLink="/car/list">Car List</a>
       </li>
 
       <li class="nav-item dropdown" appDropdownToggle>
