--- a/src/app/components/cars/car-list/car-list.component.scss
+++ b/src/app/components/cars/car-list/car-list.component.scss
@@ -6,3 +6,13 @@
     color: #ffffff;
   }
 }
+
+.available {
+  color: green;
+  font-weight: bold;
+}
+
+.unavailable {
+  color: red;
+  font-weight: bold;
+}
