--- a/src/app/components/cars/car-list/car-list.component.html
+++ b/src/app/components/cars/car-list/car-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-4 mt-3" *ngFor="let car of cars">
+  <div class="col-12 col-lg-4 mt-3" *ngFor="let car of cars">
     <div class="card">
       <img
         class="card-img-top"
@@ -10,6 +10,7 @@
       <div class="card-body mt-2">
         <h5 class="card-title text-center">{{car.id}}. {{car.name}}</h5>
         <p class="card-text">Model: {{car.model}}</p>
+        <p class="card-text">Price: {{car.price | currency:'EUR'}} / day</p>
 
         <p class="card-text">
           <span *ngIf="car.available; else notAvailable" [ngClass]="'car.available' ? 'available' : ''">
