Created car details component

--- a/src/app/components/cars/car-list/car-list.component.html
+++ b/src/app/components/cars/car-list/car-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12 col-lg-4 mt-3" *ngFor="let car of cars">
+  <div class="col-12 col-lg-4 mt-3 mb-5" *ngFor="let car of cars">
     <div class="card">
       <img
         class="card-img-top"
@@ -10,7 +10,7 @@
       <div class="card-body mt-2">
         <h5 class="card-title text-center">{{car.id}}. {{car.name}}</h5>
         <p class="card-text">Model: {{car.model}}</p>
-        <p class="card-text">Price: {{car.price | currency:'EUR'}} / day</p>
+        <p class="card-text">Price: <strong>{{car.price | currency:'EUR'}}</strong> / day</p>
 
         <p class="card-text">
           <span *ngIf="car.available; else notAvailable" [ngClass]="'car.available' ? 'available' : ''">
@@ -19,9 +19,10 @@
           <ng-template #notAvailable><span [ngClass]="'!car.available' ? 'unavailable' : ''">Out of Stock</span></ng-template>
         </p>
 
-        <hr>
+        <hr/>
         <p class="card-text">{{car.description}}</p>
-        <hr>
+        <hr/>
+
         <div class="text-center mt-2">
           <a class="btn btn-primary w-100 details-btn text-uppercase">Details</a>
         </div>
