--- a/src/app/components/cars/car-list/car-list.component.html
+++ b/src/app/components/cars/car-list/car-list.component.html
@@ -24,7 +24,7 @@
         <hr/>
 
         <div class="text-center mt-2">
-          <a class="btn btn-primary w-100 details-btn text-uppercase">Details</a>
+          <a class="btn btn-primary w-100 details-btn text-uppercase" (click)="onShowDetails(car.id)">Details</a>
         </div>
       </div>
     </div>
