Truncate the car descriptions

--- a/src/app/components/cars/car-details/car-details.component.html
+++ b/src/app/components/cars/car-details/car-details.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="cars.detailsImage">
+  <img [src]="cars.detailsImage" alt="cars.name">
+</div>
 {{cars.name}}
 {{cars.id}}
 {{cars.model}}
