--- a/src/app/components/cars/car-list/car-list.component.scss
+++ b/src/app/components/cars/car-list/car-list.component.scss
@@ -16,3 +16,11 @@
   color: red;
   font-weight: bold;
 }
+
+.read-more {
+  font-weight: bold;
+
+  &:hover{
+    text-decoration: underline;
+  }
+}
