Created variables and the footer component

--- a/src/assets/styles/variables/_variables.scss
+++ b/src/assets/styles/variables/_variables.scss
@@ -10,6 +10,7 @@ $Montserrat-Subrayada-Bold: 'Montserrat-Subrayada-Bold', sans-serif;
 
 // Colors:
 $black: #000000;
+$light-black: #1e1f22;
 $white: #000000;
 $green: #01FF70;
 $light-grey: #c4c4c4;
