--- a/src/assets/styles/fonts/_fonts.scss
+++ b/src/assets/styles/fonts/_fonts.scss
@@ -1,39 +1,39 @@
 @font-face {
   font-family: 'Raleway';
-  src: url('./assets/fonts/Raleway/Raleway-Regular.ttf')
+  src: url('/assets/fonts/Raleway/Raleway-Regular.ttf') format('truetype');;
 }
 
 @font-face {
   font-family: 'Raleway-Bold';
-  src: url('./assets/fonts/Raleway/Raleway-Bold.ttf');
+  src: url('/assets/fonts/Raleway/Raleway-Bold.ttf');
 }
 
 @font-face {
   font-family: 'Raleway-Semibold';
-  src: url('./assets/fonts/Raleway/Raleway-SemiBold.ttf')
+  src: url('/assets/fonts/Raleway/Raleway-SemiBold.ttf')
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('./assets/fonts/Montserrat/Montserrat-Regular.ttf')
+  src: url('/assets/fonts/Montserrat/Montserrat-Regular.ttf')
 }
 
 @font-face {
   font-family: 'Montserrat-Semibold';
-  src: url('./assets/fonts/Montserrat/Montserrat-SemiBold.ttf')
+  src: url('/assets/fonts/Montserrat/Montserrat-SemiBold.ttf')
 }
 
 @font-face {
   font-family: 'Montserrat-Bold';
-  src: url('./assets/fonts/Montserrat/Montserrat-Bold.ttf')
+  src: url('/assets/fonts/Montserrat/Montserrat-Bold.ttf')
 }
 
 @font-face {
   font-family: 'Montserrat-Subrayada';
-  src: url('./assets/fonts/Montserrat-Subrayada/MontserratSubrayada-Regular.ttf')
+  src: url('/assets/fonts/Montserrat-Subrayada/MontserratSubrayada-Regular.ttf')
 }
 
 @font-face {
   font-family: 'Montserrat-Subrayada-Bold';
-  src: url('./assets/fonts/Montserrat-Subrayada/MontserratSubrayada-Bold.ttf')
+  src: url('/assets/fonts/Montserrat-Subrayada/MontserratSubrayada-Bold.ttf')
 }
