--- a/src/assets/styles/variables/_variables.scss
+++ b/src/assets/styles/variables/_variables.scss
@@ -11,7 +11,7 @@ $Montserrat-Subrayada-Bold: 'Montserrat-Subrayada-Bold', sans-serif;
 // Colors:
 $black: #000000;
 $light-black: #1e1f22;
-$white: #000000;
+$white: #ffffff;
 $green: #01FF70;
 $light-grey: #c4c4c4;
 $grey: #DDDDDD;
