Finished header styling

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -21,7 +21,7 @@
         <p class="copy-right">&copy; {{footerDate | date:'yyyy'}} Car Rental. All rights reserved.</p>
       </div>
 
-      <div class="col-md-6 col-lg-7 g-maps-wrap">
+      <div class="col-md-6 col-lg-7 pr-md-0 g-maps-wrap">
         <agm-map [latitude]="lat" [zoom]="zoom" [longitude]="lng">
           <agm-marker  [latitude]="lat" [longitude]="lng"></agm-marker>
         </agm-map>
