--- a/src/assets/styles/variables/_variables.scss
+++ b/src/assets/styles/variables/_variables.scss
@@ -12,7 +12,7 @@ $Montserrat-Subrayada-Bold: 'Montserrat-Subrayada-Bold', sans-serif;
 $black: #000000;
 $light-black: #1e1f22;
 $white: #ffffff;
-$green: #01FF70;
+$green: #228B22;
 $light-grey: #c4c4c4;
 $grey: #DDDDDD;
 $red: #FF4136;
