--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,28 +1,59 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" routerLink="/">Car Rental</a>
+<header>
+  <nav class="row main mx-0 w-100">
+    <div class="col-8 col-lg-5 col-xl-7">
+      <a class="brand">Car Rental</a>
+    </div>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <div appDropdownToggle class="col-4 text-right d-lg-none">
+      <button class="navbar-toggler" type="button">
+        <fa-icon [icon]="iconBars"></fa-icon>
+      </button>
+    </div>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/car/list">Car List</a>
-      </li>
+    <div class="collapse navbar-collapse col-12 col-lg-7 col-xl-5">
+      <ul class="items">
+        <li class="item"><a class="text-uppercase">Home</a></li>
+        <li class="item"><a class="text-uppercase">About</a></li>
+        <li class="item"><a class="text-uppercase">Services</a></li>
+        <li class="item cars-wrap position-relative" appDropdownToggle>
+          <a class="text-uppercase">Cars</a>
 
-      <li class="nav-item dropdown" appDropdownToggle>
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cars</a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item">Available Cars</a>
-          <a class="dropdown-item">Unavailable Cars</a>
-        </div>
-      </li>
-    </ul>
-
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
+          <div class="dropdown-menu animated">
+            <a class="dropdown-item">Convertibles</a>
+            <a class="dropdown-item">Suvs</a>
+            <a class="dropdown-item">Exotic</a>
+            <hr>
+            <a class="dropdown-item">Mercedes</a>
+            <a class="dropdown-item">Lexus</a>
+            <a class="dropdown-item">BMW</a>
+          </div>
+        </li>
+        <li class="item"><a class="text-uppercase">Contacts</a></li>
+      </ul>
+    </div>
+    <!-- <a class="navbar-brand" routerLink="/">Car Rental</a>
+  
+    
+  
+    <div class="collapse navbar-collapse" >
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/car/list">Car List</a>
+        </li>
+  
+        <li class="nav-item dropdown" appDropdownToggle>
+          <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cars</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item">Available Cars</a>
+            <a class="dropdown-item">Unavailable Cars</a>
+          </div>
+        </li>
+      </ul>
+  
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div> -->
+  </nav>
+</header>
