--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <div class="row">
+  <div class="row mx-0">
     <div class="col-12">
       <router-outlet></router-outlet>
     </div>
