--- a/src/assets/styles/variables/_variables.scss
+++ b/src/assets/styles/variables/_variables.scss
@@ -13,6 +13,7 @@ $black: #000000;
 $light-black: #1e1f22;
 $white: #ffffff;
 $green: #228B22;
+$grey: #cfd8dc;
 $light-grey: #c4c4c4;
 $grey: #DDDDDD;
 $red: #FF4136;
