--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container-fluid position-relative">
     <div class="row">
-      <div class="col-md-6 col-lg-5 contact-wrap">
+      <div class="col-md-6 col-lg-6 contact-wrap">
         <h2 class="title text-uppercase text-center">Contacts</h2>
 
         <ul class="contact">
@@ -21,7 +21,7 @@
         <p class="copy-right">&copy; {{footerDate | date:'yyyy'}} Car Rental. All rights reserved.</p>
       </div>
 
-      <div class="col-md-6 col-lg-7 pr-md-0 g-maps-wrap">
+      <div class="col-md-6 col-lg-6 pr-md-0 g-maps-wrap px-0">
         <agm-map [latitude]="lat" [zoom]="zoom" [longitude]="lng">
           <agm-marker  [latitude]="lat" [longitude]="lng"></agm-marker>
         </agm-map>
