--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="container mt-5">
+<div class="container-fluid px-0">
   <div class="row mx-0">
-    <div class="col-12">
+    <div class="col-12 px-0">
       <router-outlet></router-outlet>
     </div>
   </div>
