Created the contact page
- Created the contact Form using Reactive Forms
- Added styling
- Used grid system
- Applied custom classes
- Added necessary methods in the ts file

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -28,7 +28,7 @@
             <a class="dropdown-item">BMW</a>
           </div>
         </li>
-        <li class="item"><a class="text-uppercase">Contacts</a></li>
+        <li class="item"><a class="text-uppercase" [routerLink]="['/contact']" [routerLinkActive]="['active']">Contacts</a></li>
       </ul>
     </div>
   </nav>
