--- a/src/assets/styles/typography/_typography.scss
+++ b/src/assets/styles/typography/_typography.scss
@@ -76,3 +76,25 @@ p {
     font-size: $base;
   }
 }
+
+.r-button {
+  background-color: $green;
+  border: 1px solid $green;
+  border-radius: 20px;
+  color: $white;
+  font-family: $Montserrat;
+  font-size: $base;
+  letter-spacing: 1px;
+  padding: 10px 30px;
+  text-transform: uppercase;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:disabled {
+    background-color: $red;
+    border: 1px solid $red;
+    cursor: not-allowed;
+  }
+}
