--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -60,3 +60,5 @@
     <img src="../../../assets/images/main/main-2.jpg" alt="" class="img w-100">
   </div>
 </section>
+
+<app-car-list></app-car-list>
