--- a/src/app/components/cars/car-list/car-list.component.scss
+++ b/src/app/components/cars/car-list/car-list.component.scss
@@ -1,26 +1,134 @@
-.details-btn {
-  color: #ffffff;
-  font-weight: bold;
+@import '../../../../styles.scss';
+
+.car-wrap {
+  &::after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background: linear-gradient(to bottom, rgba(34, 34, 33, 0) 0%, rgba(34, 34, 33, 0) 25%, #222221 100%);
+    content: "";
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#222226', endColorstr='#222226', GradientType=0);
+    height: 100%;
+    transition: 0.35s all ease;
+    width: 100%;
+  }
 
   &:hover {
-    color: #ffffff;
+    @include media-breakpoint-up(lg) {
+      &::after {
+        background: rgba(68, 104, 87, 0.8);
+      }
+    }
+
+    @include media-breakpoint-up(xl) {
+      .text {
+        bottom: 50%;
+        transform: translate(-50%, 50%);
+      }
+    }
   }
 }
 
-.available {
-  color: green;
-  font-weight: bold;
+.text {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: 0.35s all ease;
+  margin: 0 0 15px 10px;
+  width: 100%;
+  z-index: 1;
+
+  @include media-breakpoint-up(xl) {
+    bottom: 0;
+    left: 35%;
+    margin: 0 0 20px 0;
+    max-width: 300px;
+    width: auto;
+  }
 }
 
-.unavailable {
-  color: red;
-  font-weight: bold;
+.title {
+  color: $white;
+  font-family: $Montserrat;
+  font-size: 18px;
+  letter-spacing: 1.6px;
+  margin-bottom: 20px;
+  text-align: center;
+
+  @include media-breakpoint-up(xl) {
+    text-align: left;
+    font-size: 24px;
+  }
 }
 
-.read-more {
-  font-weight: bold;
+.price {
+  color: $red;
+  font-family: $Montserrat;
+  font-size: 14px;
+  letter-spacing: 1px;
+  margin-bottom: 0;
 
-  &:hover{
-    text-decoration: underline;
+  @include media-breakpoint-up(xl) {
+    margin-bottom: 5px;
+    font-size: 16px;
+  }
+}
+
+.price-discount {
+  color: $white;
+  font-family: $Montserrat;
+  font-size: 14px;
+  letter-spacing: 1px;
+  margin-bottom: 0;
+
+  @include media-breakpoint-up(xl) {
+    font-size: 16px;
+  }
+}
+
+.stock {
+  color: $green;
+  font-family: $Montserrat;
+  font-size: 14px;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+
+  @include media-breakpoint-up(xl) {
+    font-size: 16px;
+  }
+}
+
+.out-of-stock {
+  color: $red;
+  font-family: $Montserrat;
+  font-size: 14px;
+  letter-spacing: 1px;
+
+  @include media-breakpoint-up(xl) {
+    font-size: 16px;
+  }
+}
+
+.add-cart {
+  background-color: $green;
+  border: 1px solid $green;
+  color: $white;
+  font-family: $Montserrat-Semibold;
+  font-size: 14px;
+  letter-spacing: 1px;
+  padding: 6px 12px;
+  text-transform: uppercase;
+
+  @include media-breakpoint-up(xl) {
+    font-size: 16px;
+    padding: 15px;
+  }
+
+  &:focus {
+    border: 1px solid $red;
+    outline: none;
   }
 }
