--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -19,6 +19,7 @@
         </ul>
 
         <p class="copy-right">&copy; {{footerDate | date:'yyyy'}} Car Rental. All rights reserved.</p>
+        <p class="copy-right">Author: Tudor Popescu</p>
       </div>
 
       <div class="col-md-6 col-lg-6 pr-md-0 g-maps-wrap px-0">
