Created the services site section
- Created new service component
- Used general styling
- Used grid system
- Added custom images
- Worked on the responsive part

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -81,6 +81,10 @@ footer {
       @include media-breakpoint-up(md) {
         height: 600px;
       }
+
+      @include media-breakpoint-up(lg) {
+        height: 100%;
+      }
     }
   }
 }
