--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,7 +14,7 @@
       <ul class="items">
         <li class="item"><a class="text-uppercase" routerLink="/home" routerLinkActive="active">Home</a></li>
         <li class="item"><a class="text-uppercase" [routerLink]="['/about']" routerLinkActive="active">About</a></li>
-        <li class="item"><a class="text-uppercase">Services</a></li>
+        <li class="item"><a class="text-uppercase" [routerLink]="['/service']" routerLinkActive="active">Services</a></li>
         <li class="item cars-wrap position-relative" appDropdownToggle>
           <a class="text-uppercase">Cars</a>
 
